@@ -1,8 +1,9 @@
-##parameters=ids, REQUEST=None
+##parameters=ids=None, REQUEST=None
 
 attendees = context.attendees
 
-context.removeAttendees(ids)
+if ids is not None:
+    context.removeAttendees(ids)
 
 if REQUEST:
     REQUEST.RESPONSE.redirect('%s/calendar_attendees_form' % (context.absolute_url(), ))
